# gone

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/gone/: __about__.py  __init__.py  core.py
tests/: test_core.py
